# ARHA

./: README.md
ARHA_firmware/: .cproject  .mxproject  .project  ARHA_firmware Debug.launch  ARHA_firmware.ioc
ARHA_firmware/Debug/: ARHA_firmware.elf  ARHA_firmware.list  ARHA_firmware.map  makefile  objects.list
arha_description/: CMakeLists.txt  package.xml
arha_description/meshes/: ShoulderLD_Link.stl  ShoulderLD_link.STL  ShoulderRD_Link.stl  ShoulderRD_link.STL  WristLD_Link.stl  WristLD_link.STL  WristRD_Link.stl  WristRD_link.STL  base_link.STL  chest_link.STL  chest_link.stl
arha_description/urdf/: ARHA.csv  ARHA.urdf  arha_single_arm.urdf
arha_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
arha_moveit2/config/: arha_description.ros2_control.xacro  arha_description.ros2_control_right_arm.xacro  arha_description.ros2_control_right_arm_partial.xacro  arha_description.srdf  arha_description.urdf.xacro  arha_description_right_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_controllers_right_arm.yaml  ros2_controllers.yaml  ros2_controllers_right_arm.yaml  sensors_3d.yaml  trajectory_execution_right_arm.yaml
arha_moveit2/launch/: demo.launch.py  demo_right_arm.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arha_moveit2/scripts/: static_left_joint_state_publisher.py  zero_right_arm_motors.py
finger_sensor_test/: finger_sensor_test.ino
(+11 files in other folders)
